Include the XML to the package to support VS intelligence
1. Include the XML to the package to support VS intelligence
2. Minor update for the comment.

--- a/src/Microsoft.Extensions.OData.Client/Microsoft.Extensions.OData.Client.Nightly.nuspec
+++ b/src/Microsoft.Extensions.OData.Client/Microsoft.Extensions.OData.Client.Nightly.nuspec
@@ -23,5 +23,6 @@
   <files>
     <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.dll" target="lib\netstandard2.0" />
     <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.xml" target="lib\netstandard2.0" />
   </files>
 </package>
