--- a/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.Client.Abstractions.Nightly.nuspec
+++ b/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.Client.Abstractions.Nightly.nuspec
@@ -20,5 +20,6 @@
   <files>
     <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.Abstractions.dll" target="lib\netstandard2.0" />
     <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
