--- a/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
+++ b/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
@@ -4,10 +4,10 @@
         <id>Microsoft.Extensions.OData.Client.Abstractions</id>
         <title>Microsoft Extensions OData Client.Abstractions</title>
         <version>$VersionNuGetSemantic$</version>
-        <authors>Microsoft</authors>
+        <authors>Microsoft</authors>        
         <copyright>&#169; Microsoft Corporation. All rights reserved.</copyright>
-        <description>This package contains the codes you need to create OData client.</description>
-        <summary>This package contains the codes you need to create OData client.</summary>
+        <description>This package contains the abstract codes you need to create OData v3 client.</description>
+        <summary>This package contains the abstract codes you need to create OData v3 client.</summary>
         <language>en-US</language>
         <projectUrl>http://github.com/OData/Extensions</projectUrl>
         <licenseUrl>http://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
