--- a/src/Microsoft.Extensions.OData.Client/Microsoft.Extensions.OData.Client.Nightly.nuspec
+++ b/src/Microsoft.Extensions.OData.Client/Microsoft.Extensions.OData.Client.Nightly.nuspec
@@ -21,7 +21,7 @@
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.pdb" target="lib\netstandard2.0" />
   </files>
 </package>
