--- a/src/Microsoft.Extensions.OData.Client/Microsoft.Extensions.OData.Client.Release.nuspec
+++ b/src/Microsoft.Extensions.OData.Client/Microsoft.Extensions.OData.Client.Release.nuspec
@@ -18,6 +18,6 @@
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
   </files>
 </package>
