--- a/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Nightly.nuspec
+++ b/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Nightly.nuspec
@@ -12,7 +12,7 @@
         <projectUrl>http://github.com/OData/Extensions</projectUrl>
         <licenseUrl>http://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <tags>Microsoft OpenApi OData EDM</tags>
+        <tags>Microsoft OData V3 Client</tags>
         <dependencies>
             <dependency id="Microsoft.Data.Services.Client" version="$ODataClientPackageDependency$" />
         </dependencies>
@@ -20,5 +20,6 @@
   <files>
     <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
     <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
