--- a/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
+++ b/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
@@ -12,12 +12,14 @@
         <projectUrl>http://github.com/OData/Extensions</projectUrl>
         <licenseUrl>http://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <tags>Microsoft OData EDM Client</tags>
+        <tags>Microsoft OData V3 Client</tags>
         <dependencies>
-            <dependency id="Microsoft.OData.Client" version="$ODataClientPackageDependency$" />
+            <dependency id="Microsoft.Data.Services.Client" version="$ODataClientPackageDependency$" />
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
