renamed UriTranslator -> UriSegmentTranslator and UriTranslatorOptions -> MigrationOptions.  Also set KeySerializer to be based on parentheses instead of slashes, and adjusted tests to match (no longer expecting Products/1, now expecting Products(1))

--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -5,7 +5,11 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <Import Project="..\Build.props"/>
+  <Import Project="..\Build.props" />
+
+  <ItemGroup>
+    <Compile Remove="QueryTranslator.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
