--- a/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
@@ -73,7 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="QueryTranslationTests.cs" />
+    <Compile Include="FilterTranslationTests.cs" />
     <Compile Include="SampleModelBuilder.cs" />
     <Compile Include="UriTranslationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
