Migrated unit tests to xUnit, name changes (ExtensionMethods -> EdmExtensions, MigrationOptions -> ODataMigrationOptions), cleanup of comments, moved using directives under namespaces, added copyright comments, removed custom uri Append function

--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -5,11 +5,11 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <Import Project="..\Build.props" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile />
+  </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="QueryTranslator.cs" />
-  </ItemGroup>
+  <Import Project="..\Build.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
