--- a/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
@@ -48,7 +48,6 @@
     <Compile Include="MultipleQueryOptionTest.cs" />
     <Compile Include="PathSegmentTranslationTest.cs" />
     <Compile Include="TestModelProvider.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Microsoft.Extensions.OData.Migration\Microsoft.Extensions.OData.Migration.csproj">
@@ -93,6 +92,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
