--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -8,7 +8,14 @@
   <Import Project="..\Build.props" />
 
   <ItemGroup>
+    <Compile Remove="IWebApiAssembliesResolver.cs" />
+    <Compile Remove="ODataMigrationInputFormatter.cs" />
+    <Compile Remove="WebApiAssembliesResolver.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.1.0" />
     <PackageReference Include="Microsoft.Data.Edm" Version="5.8.4" />
     <PackageReference Include="Microsoft.Data.OData" Version="5.8.4" />
     <PackageReference Include="Microsoft.OData.Core" Version="7.6.0" />
