--- a/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FilterTranslationTest.cs" />
+    <Compile Include="HttpContextHandlingTest.cs" />
     <Compile Include="InlineCountTranslationTest.cs" />
     <Compile Include="MultipleQueryOptionTest.cs" />
     <Compile Include="PathSegmentTranslationTest.cs" />
@@ -64,6 +65,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http">
+      <Version>2.2.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Data.OData">
       <Version>5.8.4</Version>
     </PackageReference>
