changed condition to translate query to existence of DataServiceVersion or MaxDataServiceVersion header.  Also adjusted the way that request paths are appended to the service uri after testing the extension in another application (Intune)

--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.2.1</Version>
   </PropertyGroup>
 
-  <Import Project="..\Build.props" />
+  <!--<Import Project="..\Build.props" />-->
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
