--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -2,11 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.1</Version>
   </PropertyGroup>
 
-  <!--<Import Project="..\Build.props" />-->
+  <Import Project="..\Build.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
