Working on serializers, verified that resource serializer can serialize in sample service, added groundwork for body translation tests

--- a/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="InlineCountTranslationTest.cs" />
     <Compile Include="MultipleQueryOptionTest.cs" />
     <Compile Include="PathSegmentTranslationTest.cs" />
+    <Compile Include="RequestBodyTranslationTest.cs" />
     <Compile Include="TestModelProvider.cs" />
   </ItemGroup>
   <ItemGroup>
