added filters, changed test names to be more descriptive, changed test edmx and prepping for testing body translation

--- a/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FilterTranslationTest.cs" />
     <Compile Include="HttpContextHandlingTest.cs" />
     <Compile Include="InlineCountTranslationTest.cs" />
+    <Compile Include="Models\SimpleProduct.cs" />
     <Compile Include="MultipleQueryOptionTest.cs" />
     <Compile Include="PathSegmentTranslationTest.cs" />
     <Compile Include="RequestBodyTranslationTest.cs" />
