--- a/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Migration.Tests/Microsoft.Extensions.OData.Migration.Tests.csproj
@@ -40,16 +40,22 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Http.OData, Version=5.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\System.Web.Http.OData.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FilterTranslationTest.cs" />
     <Compile Include="HttpContextHandlingTest.cs" />
     <Compile Include="InlineCountTranslationTest.cs" />
-    <Compile Include="Models\SimpleProduct.cs" />
+    <Compile Include="Mock\MockController.cs" />
+    <Compile Include="Mock\MockEdmModel.cs" />
+    <Compile Include="Mock\TestsServiceBase.cs" />
     <Compile Include="MultipleQueryOptionTest.cs" />
     <Compile Include="PathSegmentTranslationTest.cs" />
-    <Compile Include="RequestBodyTranslationTest.cs" />
+    <Compile Include="BodyTranslationTest.cs" />
     <Compile Include="TestModelProvider.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,14 +73,23 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore">
+      <Version>2.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Http">
       <Version>2.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core">
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Data.OData">
       <Version>5.8.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.OData.Core">
       <Version>7.6.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.4</Version>
     </PackageReference>
     <PackageReference Include="System.Xml.ReaderWriter">
       <Version>4.3.1</Version>
