Replaced hard coded string names in argumentnullexceptions with nameof, refactored out header checks to HttpRequestExtensions

--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.OData.Edm" Version="7.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
