--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.8.9</Version>
+    <Version>0.9.0-preview</Version>
   </PropertyGroup>
 
   <Import Project="..\Build.props" />
