--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.Extensions.OData.Migration.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>0.9.0-preview</Version>
+    <Authors>Microsoft</Authors>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageProjectUrl>https://odata.github.io</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/OData/Extensions/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/OData/Extensions</RepositoryUrl>
+    <PackageIconUrl>http://static.tumblr.com/hgchgxz/9ualgdf98/icon.png</PackageIconUrl>
   </PropertyGroup>
 
   <Import Project="..\Build.props" />
