Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,8 @@ pr:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+#  vmImage: 'windows-latest'
+  name: OData
 
 variables:
   solution: '**/*.sln'
