Modify the OData.Client extension nuspec file

--- a/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.Client.Abstractions.Nightly.nuspec
+++ b/src/Microsoft.Extensions.OData.Client.Abstractions/Microsoft.Extensions.OData.Client.Abstractions.Nightly.nuspec
@@ -10,9 +10,9 @@
         <summary>This package contains the abstract codes you need to create OData client.</summary>
         <language>en-US</language>
         <projectUrl>http://github.com/OData/Extensions</projectUrl>
-        <licenseUrl>http://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
+        <license type="expression">MIT</license>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <tags>Microsoft OpenApi OData EDM</tags>
+        <tags>Microsoft Extensions ODataClient AspNetCore</tags>
         <dependencies>
             <dependency id="Microsoft.OData.Client" version="$ODataClientPackageDependency$" />
         </dependencies>
