--- a/sln/.nuget/packages.config
+++ b/sln/.nuget/packages.config
@@ -24,7 +24,7 @@
   <package id="xunit.extensibility.execution" version="2.1.0" />
   <package id="xunit.runner.visualstudio" version="2.1.0" />
 
-  <!--Below packages are used by Microsoft.Extensions.ODataClient-->
+  <!--Below packages are used by Microsoft.OData.ExtensionsClient-->
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" />
   <package id="Microsoft.Extensions.Options" version="2.1.0" />
   <package id="Microsoft.Extensions.Http" version="2.1.0" />
