--- a/tools/CustomMSBuild/After.Common.targets
+++ b/tools/CustomMSBuild/After.Common.targets
@@ -84,7 +84,7 @@ using System.Resources;
 [assembly: AssemblyDefaultAlias("%AssemblyNameFull%")]
 [assembly: AssemblyFileVersion("%VersionFull%")]
 [assembly: AssemblyInformationalVersion("%VersionFull%")]
-[assembly: AssemblyVersion("%VersionFull%")]
+[assembly: AssemblyVersion("%VersionFullSemantic%")]
 [assembly: SatelliteContractVersion("%VersionFull%")]
 [assembly: AssemblyMetadata("Serviceable", "True")]
       </GenerateAssemblyAttributeTemplateCSharp>
@@ -99,7 +99,7 @@ using System.Resources;
     <PropertyGroup>
       <AssemblyAttributeOutputFile>$(IntermediateOutputPath.TrimEnd("\\"))\AssemblyAttributes$(DefaultLanguageSourceExtension)</AssemblyAttributeOutputFile>
       <AssemblyNameFull>$(AssemblyName)$(TargetExt)</AssemblyNameFull>
-      <AssemblyAttributeFileContentsTransformed>$([System.String]::Copy('$(GenerateAssemblyAttributeTemplate)').Replace("%25AssemblyNameFull%25",$(AssemblyNameFull)).Replace("%25VersionFull%25",$(VersionFull)))</AssemblyAttributeFileContentsTransformed>
+      <AssemblyAttributeFileContentsTransformed>$([System.String]::Copy('$(GenerateAssemblyAttributeTemplate)').Replace("%25AssemblyNameFull%25",$(AssemblyNameFull)).Replace("%25VersionFull%25",$(VersionFull)).Replace("%25VersionFullSemantic%25",$(VersionFullSemantic)))</AssemblyAttributeFileContentsTransformed>
     </PropertyGroup>
 
     <Message Text="GenerateAssemblyAttributeFile: Generating $(AssemblyAttributeOutputFile)" Importance="high" Condition="'$(DebugMessages)' == 'true'"/>
@@ -137,13 +137,13 @@ using System.Resources;
 internal static class VersionConstants
 {
     internal const string ReleaseVersion = "%VersionFullSemantic%";
-    internal const string AssemblyVersion = "%VersionFull%";
+    internal const string AssemblyVersion = "%VersionFullSemantic%";
 }
       </GenerateVersionConstantsTemplateCSharp>
       <GenerateVersionConstantsTemplateVB>
 Friend Class VersionConstants
     Friend Shared ReleaseVersion As String = "%VersionFullSemantic%"
-    Friend Shared AssemblyVersion As String = "%VersionFull%"
+    Friend Shared AssemblyVersion As String = "%VersionFullSemantic%"
 End Class
       </GenerateVersionConstantsTemplateVB>
     </PropertyGroup>
