--- a/src/Microsoft.Extensions.OData.Migration/Microsoft.OData.Extensions.Migration.csproj
+++ b/src/Microsoft.Extensions.OData.Migration/Microsoft.OData.Extensions.Migration.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.9.2-preview</Version>
+    <Version>1.0.0</Version>
     <Authors>Microsoft</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://odata.github.io</PackageProjectUrl>
