--- a/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.csproj
+++ b/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.csproj
@@ -1,15 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>
-    <Authors>Microsoft</Authors>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageProjectUrl>https://odata.github.io</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/OData/Extensions/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/OData/Extensions</RepositoryUrl>
-    <PackageIconUrl>http://static.tumblr.com/hgchgxz/9ualgdf98/icon.png</PackageIconUrl>
+    <AssemblyName>Microsoft.OData.Extensions.Migration</AssemblyName>
+    <RootNamespace>Microsoft.OData.Extensions.Migration</RootNamespace>
   </PropertyGroup>
 
   <Import Project="..\Build.props" />
