--- a/src/Microsoft.Extensions.OData.Client/OData.V3Client.csproj
+++ b/src/Microsoft.Extensions.OData.Client/OData.V3Client.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <AssemblyName>Microsoft.Extensions.OData.V3Client</AssemblyName>
-    <RootNamespace>Microsoft.Extensions.OData.V3Client</RootNamespace>
+    <AssemblyName>Microsoft.OData.Extensions.V3Client</AssemblyName>
+    <RootNamespace>Microsoft.OData.Extensions.V3Client</RootNamespace>
   </PropertyGroup>
 
   <Import Project="..\Build.props" />
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Extensions.OData.Client.Abstractions\OData.V3Client.Abstractions.csproj" />
+    <ProjectReference Include="..\Microsoft.OData.Extensions.Client.Abstractions\OData.V3Client.Abstractions.csproj" />
   </ItemGroup>
   
 </Project>
