--- a/test/FunctionalTests/Microsoft.Extensions.OData.Client.Tests/OData.Client.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.Extensions.OData.Client.Tests/OData.Client.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>Microsoft.Extensions.OData.Client.Tests</AssemblyName>
-    <RootNamespace>Microsoft.Extensions.OData.Client.Tests</RootNamespace>
+    <AssemblyName>Microsoft.OData.Extensions.Client.Tests</AssemblyName>
+    <RootNamespace>Microsoft.OData.Extensions.Client.Tests</RootNamespace>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <!-- Disable GenerateAssemblyInfo to use the existing AssemblyInfo.cs -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Microsoft.Extensions.OData.Client\OData.V3Client.csproj" />
+    <ProjectReference Include="..\..\..\src\Microsoft.OData.Extensions.Client\OData.V3Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
