--- a/src/Microsoft.OData.Extensions.ModelBuilder/Microsoft.OData.Extensions.ModelBuilder.csproj
+++ b/src/Microsoft.OData.Extensions.ModelBuilder/Microsoft.OData.Extensions.ModelBuilder.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Microsoft.OData.Extensions.Builder</RootNamespace>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +11,12 @@
     <PackageReference Include="Microsoft.Spatial" Version="7.6.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+  
   <ItemGroup>
     <Compile Update="SRResources.Designer.cs">
       <DesignTime>True</DesignTime>
