--- a/test/EndToEndTests/Tests/Microsoft.OData.Extensions.Client.E2ETests/OData.Client.E2ETests.csproj
+++ b/test/EndToEndTests/Tests/Microsoft.OData.Extensions.Client.E2ETests/OData.Client.E2ETests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="FluentAssertions" Version="4.19.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="Microsoft.OData.Client" Version="7.6.0" />
