Use $VersionNuGetSemanticWithoutRelease$ as the version of Migration nuget package

--- a/tools/CustomMSBuild/Versioning.props
+++ b/tools/CustomMSBuild/Versioning.props
@@ -36,6 +36,7 @@
   <PropertyGroup>
     <VersionNuGetSemantic>$(VersionFullSemantic)</VersionNuGetSemantic>
     <VersionNuGetSemantic Condition="'$(VersionRelease)'!=''">$(VersionFullSemantic)-$(VersionRelease)</VersionNuGetSemantic>
+    <VersionNuGetSemanticWithoutRelease>$(VersionFullSemantic)</VersionNuGetSemanticWithoutRelease> <!-- major.minor.build (without release number) -->
   </PropertyGroup>
   
 </Project>
