--- a/tools/CustomMSBuild/Versioning.props
+++ b/tools/CustomMSBuild/Versioning.props
@@ -48,5 +48,6 @@
   <PropertyGroup>
     <VersionNuGetSemantic>$(VersionFullSemantic)</VersionNuGetSemantic>
     <VersionNuGetSemantic Condition="'$(VersionRelease)'!=''">$(VersionFullSemantic)-$(VersionRelease)</VersionNuGetSemantic>
+    <VersionNuGetSemanticWithoutRelease>$(VersionFullSemantic)</VersionNuGetSemanticWithoutRelease> <!-- major.minor.build (without release number) -->
   </PropertyGroup>
 </Project>
