--- a/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.csproj
+++ b/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Microsoft.OData.Extensions.Migration</AssemblyName>
     <RootNamespace>Microsoft.OData.Extensions.Migration</RootNamespace>
   </PropertyGroup>
