--- a/test/EndToEndTests/Tests/Microsoft.OData.Extensions.Client.E2ETests/OData.Client.E2ETests.csproj
+++ b/test/EndToEndTests/Tests/Microsoft.OData.Extensions.Client.E2ETests/OData.Client.E2ETests.csproj
@@ -14,13 +14,13 @@
     <PackageReference Include="FluentAssertions" Version="4.19.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="Microsoft.OData.Client" Version="7.6.0" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\Microsoft.OData.Extensions.Client\OData.Client.csproj" />
+    <ProjectReference Include="..\..\..\..\src\Microsoft.OData.Extensions.Client\Microsoft.OData.Extensions.Client.csproj" />
     <ProjectReference Include="..\..\GeneratedClient\ODataVerificationClient\ODataVerificationClient.csproj">
       <Aliases></Aliases>
     </ProjectReference>
