--- a/test/FunctionalTests/Microsoft.OData.Extensions.Client.Tests/OData.Client.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.OData.Extensions.Client.Tests/OData.Client.Tests.csproj
@@ -8,7 +8,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\tools\StrongNamePublicKeys\testkey.snk</AssemblyOriginatorKeyFile>
-    <OutputPath>..\..\..\bin\AnyCPU\$(Configuration)\Test\.NETPortable</OutputPath>
+    <OutputPath>..\..\..\bin\AnyCPU\$(Configuration)\Test</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
