change the output for Migration test

--- a/test/FunctionalTests/Microsoft.OData.Extensions.Migration.Tests/Microsoft.OData.Extensions.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.OData.Extensions.Migration.Tests/Microsoft.OData.Extensions.Migration.Tests.csproj
@@ -7,7 +7,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\tools\StrongNamePublicKeys\testkey.snk</AssemblyOriginatorKeyFile>
-    <OutputPath>..\..\..\bin\AnyCPU\$(Configuration)\Test\.NETPortable</OutputPath>
+    <OutputPath>..\..\..\bin\AnyCPU\$(Configuration)\Test\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
