--- a/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Nightly.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
     <metadata>
-        <id>Microsoft.Extensions.OData.V3Client.Abstractions</id>
+        <id>Microsoft.OData.Extensions.V3Client.Abstractions</id>
         <title>Abstractions for OData v3 Client Extensions</title>
         <version>$VersionFullSemantic$-Nightly$NightlyBuildVersion$</version>
         <authors>Microsoft</authors>
@@ -18,8 +18,8 @@
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
