--- a/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
     <metadata>
-        <id>Microsoft.Extensions.OData.Client.Abstractions</id>
+        <id>Microsoft.OData.Extensions.Client.Abstractions</id>
         <title>Microsoft Extensions OData Client.Abstractions</title>
-        <version>$VersionNuGetSemantic$</version>
+        <version>1.0.0</version>
         <authors>Microsoft</authors>        
         <copyright>&#169; Microsoft Corporation. All rights reserved.</copyright>
         <description>This package contains the abstract codes you need to create OData v3 client.</description>
@@ -18,8 +18,8 @@
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
