--- a/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Nightly.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
     <metadata>
-        <id>Microsoft.Extensions.OData.V3Client</id>
+        <id>Microsoft.OData.Extensions.V3Client</id>
         <title>Microsoft Extensions OData Client</title>
         <version>$VersionFullSemantic$-Nightly$NightlyBuildVersion$</version>
         <authors>Microsoft</authors>
@@ -17,12 +17,12 @@
             <dependency id="Microsoft.Extensions.DependencyInjection" version="$ExtensionsDependencyInjectionDependency$" />
             <dependency id="Microsoft.Extensions.Options" version="$ExtensionsOptionsDependency$" />
             <dependency id="Microsoft.Extensions.Http" version="$ExtensionsHttpDependency$" />
-            <dependency id="Microsoft.Extensions.OData.V3Client.Abstractions" version="[$VersionFullSemantic$-Nightly$NightlyBuildVersion$]" />
+            <dependency id="Microsoft.OData.Extensions.V3Client.Abstractions" version="[$VersionFullSemantic$-Nightly$NightlyBuildVersion$]" />
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.Extensions.OData.V3Client.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.xml" target="lib\netstandard2.0" />
   </files>
 </package>
