update according to pr feedback

--- a/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.OData.Extensions.Client.Abstractions.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.OData.Extensions.Client.Abstractions.Nightly.nuspec
@@ -5,7 +5,7 @@
         <title>Microsoft Extensions OData Client.Abstractions</title>
         <version>$VersionFullSemantic$-Nightly$NightlyBuildVersion$</version>
         <authors>.NET Foundation</authors>
-        <copyright>&#169; .NET Foundation and Contributors.</copyright>
+        <copyright>&#169; .NET Foundation and Contributors. All rights reserved.</copyright>
         <description>This package contains the abstract codes you need to create OData client.</description>
         <summary>This package contains the abstract codes you need to create OData client.</summary>
         <language>en-US</language>
